# LLD

./: .gitignore  howtorunthisusingcmake.text
01 How to write distributed code/: car.cpp  car.h  main.cpp
02 amazon notify using export/: main.cpp
02 amazon notify using header/: CMakeLists.txt  main.cpp
02 amazon notify using header/observable/: iphoneObservable.cpp  iphoneObservable.h  stockObservable.h
02 amazon notify using header/observer/: emailAlertObserver.cpp  emailAlertObserver.h  mobileAlertObserver.cpp  mobileAlertObserver.h  notifyAlertObserver.h
03 Pizza Decorator/: CMakeLists.txt  main.cpp
03 Pizza Decorator/pizza/: BasePizza.h  FarmHouse.cpp  FarmHouse.h  Margherita.cpp  Margherita.h  VegDelight.cpp  VegDelight.h
03 Pizza Decorator/toppings/: ExtraCheese.cpp  ExtraCheese.h  Mushroom.cpp  Mushroom.h  ToppingDecorator.h
04 Factory pattern payement strategy/: CMakeLists.txt  CreditCardPayment.cpp  CreditCardPayment.h  main.cpp  (+5 more)
06 Elevator Design/: CMakeLists.txt  main.cpp
06 Elevator Design/building/: Building.cpp  Building.h  Floor.cpp  Floor.h
06 Elevator Design/button/: InternalButtons.cpp  InternalButtons.h
06 Elevator Design/common/: Direction.h  ElevatorState.h
06 Elevator Design/creator/: ElevatorCreator.cpp  ElevatorCreator.h
06 Elevator Design/dispatcher/: ExternalDispatcher.cpp  ExternalDispatcher.h  InternalDispatcher.cpp  InternalDispatcher.h
06 Elevator Design/elevator/: ElevatorCar.cpp  ElevatorCar.h  ElevatorController.cpp  ElevatorController.h  ElevatorDisplay.cpp  ElevatorDisplay.h  ElevatorDoor.cpp  ElevatorDoor.h
(+27 files in other folders)
